Bug 1244118 - Shutdown threadpool when xpcom-shutdown-threads happened. r=seth